# kalendarium

./: .gitignore  README.md
release/: license.txt  readme.txt
source/: CMakeLists.txt  ClockWidget.cpp  ClockWidget.h  Event.cpp  Event.h  EventCreator.cpp  EventCreator.h  EventManager.cpp  EventManager.h  MainGui.cpp  MainGui.h  TablesContainer.cpp  TablesContainer.h  WeekModel.cpp  WeekModel.h  main.cpp
source/address/: AddWidget.cpp  AddWidget.cpp~  AddWidget.h  Contact.cpp  Contact.h  ContactWidget.cpp  ContactWidget.cpp~  ContactWidget.h  ListWidget.cpp  ListWidget.cpp~  ListWidget.h  ListWidget.h~  Rubrica.cpp  Rubrica.cpp~  Rubrica.h  Rubrica.h~  SearchWidget.cpp  SearchWidget.cpp~  SearchWidget.h  Text File
